--- a/body.html
+++ b/body.html
@@ -90,7 +90,7 @@
     <p>
       Idéalement sur une petite crêpière, verser simplement la quantité de pâte
       souhaitée. Laisser cuire jusqu'à l'apparition de petites bulles sur le
-      dessus du pancake puis retourner À la poêle, même principe à feu doux
+      dessus du pancake puis retourner <p>À la poêle, même principe à feu doux</p>
     </p>
     <h2>Dégustation</h2>
     <p>
