--- a/body.html
+++ b/body.html
@@ -10,12 +10,13 @@
   <body>
     
     <h1>1 Mug Pancakes</h1>
+    <img src="https://images.unsplash.com/photo-1528207776546-365bb710ee93?fit=crop&w=600">
 
     <h2 class="red">Résumé</h2>
 
     <p>
-    <ul> La pâte : 5 minutes </ul>
-    <ul>  Cuisson : 10 minutes </ul>
+    <ul><a href="https://www.marmiton.org/recettes/recette_pancakes_15299.aspx">La pâte</a> : 5 minutes </ul>
+    <ul> <a href="https://www.cuisinersansallergies.fr/comment-reussir-la-cuisson-des-pancakes/"> Cuisson</a> : 10 minutes </ul>
     <ul><strong> Difficulté</strong> : facile, <span class="red">Budget</span> : €--</ul>
      
     </p>
@@ -24,13 +25,13 @@
     <h3 class="surlign">Ustensiles</h3>
     <ul>
       <li>
-        1 mug (env. 35cl)
+       <a href="https://www.igo-objetspub.fr/vaisselle/tasses/mug-c-ramique-classique-350-ml/p195061-master?np=yes&gclid=Cj0KCQjwnbmaBhD-ARIsAGTPcfX5DBWSiY_OZiArDw0M_jeFXg2jTUQ5RciLqbXUNJ5m_ut-WuGfcu0aAuDJEALw_wcB"> 1 mug</a> (env. 35cl)
       </li>
       <li>
         1 saladier
       </li>
       <li>
-        1 petite crêpière ou 1 poêle
+        1<a href="https://cdiscount.com/electromenager/r-mini+crepiere+electrique.html#_his_"> petite crêpière</a> ou 1 poêle
       </li>
       <li>
         1 cuillère à soupe
