--- a/body.html
+++ b/body.html
@@ -63,7 +63,7 @@
       <li>
         2 cuillères soupe de sucre
       </li>
-    
+    <p class="astuce">Astuce : Vous n'avez pas d'oeuf ? Incorporer un peu de bannane écrasée dans la préparation.</p>
 
     <h2>Instructions</h2>
 
@@ -76,7 +76,7 @@
         Réserver dans un saladier
       </li>
       <li>
-        de nouveau dans le mug :<span class="red">bien mélanger l'oeuf et l'huile</span> puis ajouter le
+        de nouveau dans le mug :<span>bien mélanger l'oeuf et l'huile</span> puis ajouter le
         lait
       </li>
       <li>
@@ -93,10 +93,12 @@
       souhaitée. Laisser cuire jusqu'à l'apparition de petites bulles sur le
       dessus du pancake puis retourner <p>À la poêle, même principe à feu doux</p>
     </p>
+  <p class="astuce">Astuce : Ajouter un petit bout de beurre à fondre sur la pile de pancakes, un régal.</p>
     <h2>Dégustation</h2>
     <p>
       Parfait avec un peu de beurre de cacahuète, avec une bonne confiture ou
       tout simplement avec un peu de sucre
     </p>
+    <p class="astuce">Astuce : Si vous n'avez pas d'accompagnement en tête, verser un peu de sirop d'érable avant de servir.</p>
   </body>
 </html>
