--- a/body.html
+++ b/body.html
@@ -10,8 +10,9 @@
   <body>
     
     <h1>1 Mug Pancakes</h1>
+    <div class="picture">
     <img src="https://images.unsplash.com/photo-1528207776546-365bb710ee93?fit=crop&w=600">
-
+  </div>
     <h2 class="red">Résumé</h2>
 
     <p>
