--- a/body.html
+++ b/body.html
@@ -64,7 +64,7 @@
       <li>
         2 cuillères soupe de sucre
       </li>
-    <p class="astuce">Astuce : Vous n'avez pas d'oeuf ? Incorporer un peu de bannane écrasée dans la préparation.</p>
+    <p class="trick">Astuce : Vous n'avez pas d'oeuf ? Incorporer un peu de bannane écrasée dans la préparation.</p>
 
     <h2>Instructions</h2>
 
@@ -94,12 +94,12 @@
       souhaitée. Laisser cuire jusqu'à l'apparition de petites bulles sur le
       dessus du pancake puis retourner <p>À la poêle, même principe à feu doux</p>
     </p>
-  <p class="astuce">Astuce : Ajouter un petit bout de beurre à fondre sur la pile de pancakes, un régal.</p>
+  <p class="trick">Astuce : Ajouter un petit bout de beurre à fondre sur la pile de pancakes, un régal.</p>
     <h2>Dégustation</h2>
     <p>
       Parfait avec un peu de beurre de cacahuète, avec une bonne confiture ou
       tout simplement avec un peu de sucre
     </p>
-    <p class="astuce">Astuce : Si vous n'avez pas d'accompagnement en tête, verser un peu de sirop d'érable avant de servir.</p>
+    <p class="trick">Astuce : Si vous n'avez pas d'accompagnement en tête, verser un peu de sirop d'érable avant de servir.</p>
   </body>
 </html>
